--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
 </head>
 
 <body>
-    <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-    <!-- header-start -->
     <header>
         <div class="header-area ">
             <div id="sticky-header" class="main-header-area ">
@@ -96,7 +91,7 @@
                         <div class="slider_text text-center">
                             <div class="text">
                                 <h3>
-                                    Chicken dish with per boiled egg 
+                                    Postrearnos, simples mortales, ante HUGO DIOS. Serñor de los fogones. 
                                 </h3>
                         </div>
                     </div>
