mejora del header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Tasty Recipes</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <title>Chef Privado Hugo López</title>
+    <meta name="robots" content="index,follow">
+    <meta name="description" content="Eventos gastronómicos privados en Lanzarote. Chef Privado con elevada y sofisticada experiencia en gestión y diección de cocinas. Influencia mexicana, thailandesa y gallega">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta property="og:title" content="Chef privado Hugo López">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Eventos gastronómicos privados en Lanzarote. Chef Privado con elevada y sofisticada experiencia en gestión y diección de cocinas. Influencia mexicana, thailandesa y gallega">    
     <!-- <link rel="manifest" href="site.webmanifest"> -->
     <!-- Place favicon.ico in the root directory -->
 
