--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <div class="slider_text text-center">
                             <div class="text">
                                 <h3>
-                                    Postrearnos, simples mortales, ante HUGO DIOS. Serñor de los fogones. 
+                                    Postrearnos, simples mortales, ante HUGO Chef DIOS
                                 </h3>
                         </div>
                     </div>
