--- a/index.html
+++ b/index.html
@@ -79,18 +79,17 @@
 
     <!-- slider_area_start -->
     <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1">
+        <div class="single_slider  d-flex  slider_bg_1">
             <div class="container">
-                <div class="row align-items-center justify-content-center">
-                    <div class="col-xl-8 ">
-                        <div class="slider_text text-center">
-                            <div class="text">
-                                <h3>Hugo López Medina, Chef Privado</h3>
+                <div class="headerhugo row align-items-center justify-content-center">
+                    <div>
+                        <div class=" text-center indexheader">
+                            <h3 class="indexheader">Hugo López Medina <span>Chef Privado</span></h3>
+                            
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
         </div>
     </div>
     <!-- slider_area_end -->
