--- a/contacto.html
+++ b/contacto.html
@@ -1,226 +1,77 @@
-<!doctype html>
-<html class="no-js" lang="es">
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Sobre mí. Chef Privado Hugo López</title>
-    <meta name="robots" content="index,follow">
-    <meta name="description" content="Eventos gastronómicos privados en Lanzarote. Chef Privado con elevada y sofisticada experiencia en gestión y diección de cocinas. Influencia mexicana, thailandesa y gallega">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <meta property="og:title" content="Chef privado Hugo López">
-    <meta property="og:type" content="website">
-    <meta property="og:description" content="Eventos gastronómicos privados en Lanzarote. Chef Privado con elevada y sofisticada experiencia en gestión y diección de cocinas. Influencia mexicana, thailandesa y gallega">    
-    <!-- <link rel="manifest" href="site.webmanifest"> -->
-    <!-- Place favicon.ico in the root directory -->
-
-    <!-- CSS here -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/themify-icons.css">
-    <link rel="stylesheet" href="css/nice-select.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/gijgo.css">
-    <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="css/slicknav.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/responsive.css"> -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto - Hugo - Chef Privado</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/contacto.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon"> <!-- Asegúrate de tener un ícono -->
 </head>
+
 <body>
- 
-    <header>
-        <div class="header-area ">
-            <div id="sticky-header" class="main-header-area ">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-xl-3 col-lg-2">
-                            <div class="logo">
-                                <a href="index.html">
-                                    <img src="img/logo.png" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-lg-7">
-                            <div class="main-menu white_text  d-none d-lg-block">
-                                <nav>
-                                    <ul id="navigation">
-                                        <li><a href="index.html">Inicio</a></li>
-                                        <li><a href="sobremi.html">Sobre mí</a></li>
-                                        <li><a href="recetas.html">Mis recetas</a></li>
-                                        <!-- <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="recipes_details.html">Recipes Details</a></li>
-                                                <li><a href="elements.html">elements</a></li>
-                                            </ul>
-                                        </li> -->
-                                        <li><a href="contacto.html">Contacto</a></li>
-                                    </ul>
-                                </nav>
-                            </div>
-                        </div>                        
-                        <div class="col-12">
-                            <div class="mobile_menu d-block d-lg-none"></div>
-                        </div>
-                    </div>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="logo">Hugo</div>
+        <ul class="nav-links">
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="menu.html">Menús</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+    </nav>
 
+    <!-- Contacto Section -->
+    <section id="contacto" class="contacto">
+        <div class="contact-container">
+            <div class="contact-details">
+                <h2>Contacto</h2>
+                <div class="contact-info">
+                    <h3>Información de Contacto</h3>
+                    <p><strong>Dirección:</strong> Calle del Gourmet, 123, 28001 Madrid, España</p>
+                    <p><strong>Teléfono:</strong> +34 912 345 678</p>
+                    <p><strong>Email:</strong> <a href="mailto:contacto@hugochef.com">contacto@hugochef.com</a></p>
+                </div>
+            </div>
+            <div class="map">
+                <h3>Ubicación</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3031.5757047654284!2d-3.698666084593118!3d40.41733167936941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4226cfe86d5d1b%3A0xd0b07f8cb1e6f8b!2sCalle%20del%20Gourmet%2C%20123%2C%2028001%20Madrid%2C%20España!5e0!3m2!1ses!2ses!4v1679477353275!5m2!1ses!2ses" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+            <div class="social-media">
+                <h3>Síguenos en Redes Sociales</h3>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/HugoChef" target="_blank" class="social-icon">
+                        <img src="images/facebook-icon.png" alt="Facebook">
+                        <span>Facebook</span>
+                    </a>
+                    <a href="https://www.instagram.com/HugoChef" target="_blank" class="social-icon">
+                        <img src="images/instagram-icon.png" alt="Instagram">
+                        <span>Instagram</span>
+                    </a>
+                    <a href="https://twitter.com/HugoChef" target="_blank" class="social-icon">
+                        <img src="images/twitter-icon.png" alt="Twitter">
+                        <span>Twitter</span>
+                    </a>
+                    <a href="https://www.linkedin.com/company/hugo-chef" target="_blank" class="social-icon">
+                        <img src="images/linkedin-icon.png" alt="LinkedIn">
+                        <span>LinkedIn</span>
+                    </a>
                 </div>
             </div>
         </div>
-    </header>
-    <!-- header-end -->
+    </section>
 
-    <!-- bradcam_area  -->
-    <div class="bradcam_area bradcam_bg_1">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="bradcam_text text-center">
-                        <h3>Contact Us</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- /bradcam_area  -->
-  <!-- ================ contact section start ================= -->
-  <section class="contact-section section_padding">
-    <div class="container">
-      <div class="d-none d-sm-block mb-5 pb-4">
-        <div id="map" style="height: 480px;"></div>
-        <script>
-          function initMap() {
-            var uluru = {lat: -25.363, lng: 131.044};
-            var grayStyles = [
-              {
-                featureType: "all",
-                stylers: [
-                  { saturation: -90 },
-                  { lightness: 50 }
-                ]
-              },
-              {elementType: 'labels.text.fill', stylers: [{color: '#ccdee9'}]}
-            ];
-            var map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: -31.197, lng: 150.744},
-              zoom: 9,
-              styles: grayStyles,
-              scrollwheel:  false
-            });
-          }
-          
-        </script>        
-        
-      </div>
-
-
-      <div class="row">
-        <div class="col-12">
-          <h2 class="contact-title">Get in Touch</h2>
-        </div>
-        <div class="col-lg-12">
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-home"></i></span>
-            <div class="media-body">
-              <h3>Buttonwood, California.</h3>
-              <p>Rosemead, CA 91770</p>
-            </div>
-          </div>
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-tablet"></i></span>
-            <div class="media-body">
-              <h3>00 (440) 9865 562</h3>
-              <p>Mon to Fri 9am to 6pm</p>
-            </div>
-          </div>
-          <div class="media contact-info">
-            <span class="contact-info__icon"><i class="ti-email"></i></span>
-            <div class="media-body">
-              <h3>support@colorlib.com</h3>
-              <p>Send us your query anytime!</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ================ contact section end ================= -->
-
-    <!-- footer  -->
-    <footer class="footer">
-        <div class="footer_top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-2 col-md-6 col-lg-2">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="copy-right_text">
-            <div class="container">
-                <div class="footer_border"></div>
-                <div class="row align-items-center">
-                    <div class="col-xl-12 col-md-12">                         
-                        <div class="socail_links">
-                            <ul>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-instagram"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="ti-twitter-alt"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-dribbble"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-behance"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Hugo - Chef Privado. Todos los derechos reservados.</p>        
     </footer>
-<!--/ footer  -->
 
-
-  <!-- JS here -->
- <!-- JS here -->
- <script src="js/vendor/modernizr-3.5.0.min.js"></script>
- <script src="js/vendor/jquery-1.12.4.min.js"></script>
- <script src="js/popper.min.js"></script>
- <script src="js/bootstrap.min.js"></script>
- <script src="js/owl.carousel.min.js"></script>
- <script src="js/isotope.pkgd.min.js"></script>
- <script src="js/waypoints.min.js"></script>
- <script src="js/jquery.counterup.min.js"></script>
- <script src="js/imagesloaded.pkgd.min.js"></script>
- <script src="js/scrollIt.js"></script>
- <script src="js/jquery.scrollUp.min.js"></script>
- <script src="js/wow.min.js"></script>
- <script src="js/nice-select.min.js"></script>
- <script src="js/jquery.slicknav.min.js"></script>
- <script src="js/jquery.magnific-popup.min.js"></script>
- <script src="js/plugins.js"></script>
- <script src="js/gijgo.min.js"></script>
-
- <script src="js/main.js"></script>
+    <script src="js/nav.js"></script>
 </body>
 
 </html>
